Cups filter/pipeline failure fix

Consider cups pipeline failing as an error and
kill corresponding print job

BUG=chromium:726758

Change-Id: Icacca129be13d97631dda5ccd9c9a7d9e6ee9da4