chrome/browser/chromeos/printing/cups_print_job.h
@@ -32,6 +32,7 @@ class CupsPrintJob {
     PAPER_JAM,
     OUT_OF_INK,
     PRINTER_UNREACHABLE,
+    FILTER_FAILED,
     UNKNOWN_ERROR,
   };
 
@@ -67,6 +68,9 @@ class CupsPrintJob {
 
   // Returns true if |state_| represents a terminal state.
   bool IsJobFinished();
+
+  // Returns true if cups pipeline failed.
+  bool PipelineDead();
 
  private:
   Printer printer_;
