chrome/browser/chromeos/printing/cups_print_job_manager_impl.cc
@@ -125,6 +125,14 @@ bool ContainsReason(const printing::PrinterStatus printer_status,
                       }) != printer_status.reasons.end();
 }
 
+// Returns true if |CupsJob|.state_reasons contains |reason|
+bool JobContainsReason(const ::printing::CupsJob& job, const char* reason) {
+  return std::find_if(job.state_reasons.begin(), job.state_reasons.end(),
+                      [&reason](const std::string& r) {
+                        return r == reason;
+                      }) != job.state_reasons.end();
+}
+
 // Extracts an ErrorCode from PrinterStatus#reasons.  Returns NO_ERROR if there
 // are no reasons which indicate an error.
 chromeos::CupsPrintJob::ErrorCode ErrorCodeFromReasons(
@@ -147,19 +155,12 @@ chromeos::CupsPrintJob::ErrorCode ErrorCodeFromReasons(
 }
 
 // Check if the job should timeout.  Returns true if the job has timed out.
-bool EnforceTimeout(const printing::CupsJob& job,
-                    chromeos::CupsPrintJob* print_job) {
+bool DidTimeout(const printing::CupsJob& job,
+                chromeos::CupsPrintJob* print_job) {
   // Check to see if we should time out.
   base::TimeDelta time_waiting =
       base::Time::Now() - base::Time::FromTimeT(job.processing_started);
-  if (time_waiting > base::TimeDelta::FromSeconds(kConnectingTimeout)) {
-    print_job->set_state(chromeos::CupsPrintJob::State::STATE_ERROR);
-    print_job->set_error_code(
-        chromeos::CupsPrintJob::ErrorCode::PRINTER_UNREACHABLE);
-    return true;
-  }
-
-  return false;
+  return time_waiting > base::TimeDelta::FromSeconds(kConnectingTimeout);
 }
 
 // Update the current printed page.  Returns true of the page has been updated.
@@ -191,8 +192,11 @@ bool UpdatePrintJob(const ::printing::PrinterStatus& printer_status,
   switch (job.state) {
     case ::printing::CupsJob::PROCESSING:
       if (ContainsReason(printer_status, PrinterReason::CONNECTING_TO_DEVICE)) {
-        if (EnforceTimeout(job, print_job)) {
+        if (DidTimeout(job, print_job)) {
           LOG(WARNING) << "Connecting to printer timed out";
+          print_job->set_state(chromeos::CupsPrintJob::State::STATE_ERROR);
+          print_job->set_error_code(
+              chromeos::CupsPrintJob::ErrorCode::PRINTER_UNREACHABLE);
           print_job->set_expired(true);
         }
       } else {
@@ -202,6 +206,16 @@ bool UpdatePrintJob(const ::printing::PrinterStatus& printer_status,
     case ::printing::CupsJob::COMPLETED:
       DCHECK_GE(job.current_pages, print_job->total_page_number());
       print_job->set_state(State::STATE_DOCUMENT_DONE);
+      break;
+    case ::printing::CupsJob::STOPPED:
+      // If cups job STOPPED but with filter failure, treat as ERR
+      if (JobContainsReason(job, "job-completed-with-errors")) {
+        print_job->set_error_code(
+            chromeos::CupsPrintJob::ErrorCode::FILTER_FAILED);
+        print_job->set_state(chromeos::CupsPrintJob::State::STATE_ERROR);
+      } else {
+        print_job->set_state(ConvertState(job.state));
+      }
       break;
     case ::printing::CupsJob::ABORTED:
     case ::printing::CupsJob::CANCELED:
@@ -457,8 +471,13 @@ class CupsPrintJobManagerImpl : public CupsPrintJobManager,
           RecordJobResult(TIMEOUT_CANCEL);
           CancelPrintJob(print_job);
           // Beware, print_job was removed from jobs_ and deleted.
+        } else if (print_job->PipelineDead()) {
+          // TODO: RecordJobResult call??
+          CancelPrintJob(print_job);
         } else if (print_job->IsJobFinished()) {
           // Cleanup completed jobs.
+          LOG(WARNING) << "Removing Job " << print_job->document_title()
+                       << std::endl;
           RecordJobResult(ResultForHistogram(print_job->state()));
           jobs_.erase(entry);
         } else {
